Add some scripts (e.g carousel)

--- a/src/pug/includes/features.pug
+++ b/src/pug/includes/features.pug
@@ -4,7 +4,7 @@ section.features
       h2.visually-hidden Преимущества
       ul.tabs
         li
-          button.button-streak.active(type="button" aria-label="Доставка." data-item="delivery") #[span Доставка]
+          button.button-streak.tab-active(type="button" aria-label="Доставка." data-item="delivery") #[span Доставка]
         li
           button.button-streak(type="button" aria-label="Гарантия." data-item="warranty") #[span Гарантия]
         li
