--- a/src/pug/includes/info.pug
+++ b/src/pug/includes/info.pug
@@ -20,4 +20,4 @@ section.info
     ul.working-time
       li пн—пт: с 10:00 до 22:00
       li сб—вс: с 10:00 до 19:00
-    button.button-streak Напишите нам
+    a.contacts-email.button-streak(href="mailto:") Напишите нам
