--- a/src/pug/pages/catalog-monopods.pug
+++ b/src/pug/pages/catalog-monopods.pug
@@ -1,4 +1,4 @@
-- const page = "monopods"
+- const page = "catalog-monopods"
 
 doctype html
 html(lang="ru")
@@ -12,3 +12,4 @@ html(lang="ru")
 
     include ../includes/page-footer.pug
     include ../includes/modal.pug
+  script(src="js/script.js")
