--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -12,15 +12,19 @@
 
   .heading-1 {
     margin: 121px 0 29px;
-
     color: $black;
   }
 }
 
-.products {
+.slider-container {
+  width: 560px;
+  overflow: hidden;
+}
+
+.products-list {
+  display: flex;
   margin: 0;
   padding: 0;
-
   list-style-type: none;
 
   img {
@@ -51,7 +55,6 @@
 .button-next {
   top: 211px;
   right: 0;
-
   transform: rotate(180deg);
 }
 
@@ -109,7 +112,6 @@
 
   dd {
     margin: 0;
-
     font-size: 16px;
     line-height: 30px;
   }
