Add some minor fixies

--- a/src/pug/includes/head.pug
+++ b/src/pug/includes/head.pug
@@ -2,6 +2,12 @@ head
   meta(charset="UTF-8")
   meta(http-equiv="X-UA-Compatible" content="ie=edge")
   meta(name="viewport" content="width=device-width")
+  meta(name="description" content="Educational project - shop Device")
+
+  <meta property="og:title" content="Educational project - shop Device">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://teihden.github.io/device/">
+  <meta property="og:image" content="img/hero/product-0.svg">
 
   title Device
 
