--- a/src/pug/includes/monopods.pug
+++ b/src/pug/includes/monopods.pug
@@ -74,25 +74,25 @@ section.monopods-catalog
           li
             a.goods-card-link(href="#no_scroll")
               img(src="img/monopods/goods-1.jpg" width="360" height="380" alt="Любительская селфи-палка.")
-              h3 Любительская #[br] селфи-палка
+              h3.heading-4 Любительская #[br] селфи-палка
               span.goods-price 500 ₽
               span.heading-2.goods-detailed Подробнее
           li.goods-new
             a.goods-card-link(href="#no_scroll")
               img(src="img/monopods/goods-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка.")
-              h3 Профессиональная селфи-палка
+              h3.heading-4 Профессиональная селфи-палка
               span.goods-price 1 500 ₽
               span.heading-2.goods-detailed Подробнее
           li
             a.goods-card-link(href="#no_scroll")
               img(src="img/monopods/goods-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка.")
-              h3 Непотопляемая #[br] селфи-палка
+              h3.heading-4 Непотопляемая #[br] селфи-палка
               span.goods-price 2 500 ₽
               span.heading-2.goods-detailed Подробнее
           li
             a.goods-card-link(href="#no_scroll")
               img(src="img/monopods/goods-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной».")
-              h3 Селфи-палка «Следуй за мной»
+              h3.heading-4 Селфи-палка «Следуй за мной»
               span.goods-price 1 500 ₽
               span.heading-2.goods-detailed Подробнее
         button.button-more(type="button") Загрузить ещё
