--- a/src/pug/pages/catalog-monopods.pug
+++ b/src/pug/pages/catalog-monopods.pug
@@ -12,4 +12,4 @@ html(lang="ru")
 
     include ../includes/page-footer.pug
     include ../includes/modal.pug
-  script(src="js/script.js")
+  script(src="js/general.js")
