--- a/src/scss/general/_general.scss
+++ b/src/scss/general/_general.scss
@@ -75,11 +75,18 @@ main {
   text-transform: uppercase;
 }
 
-.heading-4 {
+.heading-3 {
   font-weight: 700;
   font-size: 24px;
   font-family: Rubik, sans-serif;
   line-height: 30px;
+}
+
+.heading-4 {
+  font-weight: 700;
+  font-size: 18px;
+  font-family: Rubik, sans-serif;
+  line-height: 20px;
 }
 
 // Paragraphs
