--- a/src/pug/includes/info.pug
+++ b/src/pug/includes/info.pug
@@ -5,18 +5,18 @@ section.info
     p.text Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
     p.text Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:
     ul.shippers
-      li Меловые линии
-      li СДИК
-      li ТоксБерри
+      li.heading-4 Меловые линии
+      li.heading-4 СДИК
+      li.heading-4 ТоксБерри
     button.button-streak Подробнее о нас
   section.contacts
     h3.heading-1 Контакты
     p.text Вы можете забрать товар сами, заехав в наш офис.#[br] Заодно сможете проверить работоспособность покупки.
-    h4 Интернет-магазин «Девайс»
+    h4.heading-3 Интернет-магазин «Девайс»
     address
-      p.location Санкт-Петербург, набережная реки Карповки, 5, литера П.
-      a(href="tel:+78128121212") +7 (812) 812-12-12
-    h4 Время работы
+      p.contacts-location Санкт-Петербург, набережная реки Карповки, 5, литера П.
+      a.contacts-telephone(href="tel:+78128121212") +7 (812) 812-12-12
+    h4.heading-3 Время работы
     ul.working-time
       li пн—пт: с 10:00 до 22:00
       li сб—вс: с 10:00 до 19:00
