--- a/src/pug/includes/page-footer.pug
+++ b/src/pug/includes/page-footer.pug
@@ -2,7 +2,7 @@ footer.page-footer
   .footer-container
     h2.visually-hidden Контакты и навигация по сайту
     if page === "index"
-      a.states-default.footer-logo-link
+      a.states-default.footer-logo-link(href="#no_scroll")
         img(src="img/logos/logo-footer.svg" width="145" height="36" alt="Логотип магазина Device.")
     else
       a.states-default.footer-logo-link(href="index.html")
