--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -17,4 +17,5 @@ html(lang="ru")
 
     include ../includes/page-footer.pug
     include ../includes/modal.pug
-  script(src="js/script.js")
+  script(src="js/general.js")
+  script(src="js/carousel.js")
