--- a/src/scss/components/_info.scss
+++ b/src/scss/components/_info.scss
@@ -31,12 +31,7 @@
 
   li {
     position: relative;
-
     color: $black;
-
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 20px;
 
     &::before {
       content: '';
@@ -73,32 +68,6 @@
 
   h4 {
     margin: 29px 0 15px;
-
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 30px;
-  }
-
-  a {
-    color: $dark;
-
-    font-weight: 400;
-    font-style: normal;
-    font-size: 18px;
-    line-height: 30px;
-
-    &:hover {
-      opacity: 0.6;
-    }
-
-    &:focus {
-      @include focus-default;
-    }
-
-    &:active {
-      outline: none;
-      opacity: 0.3;
-    }
   }
 
   button {
@@ -106,7 +75,29 @@
   }
 }
 
-.location {
+.contacts-telephone {
+  color: $dark;
+
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 30px;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:focus {
+    @include focus-default;
+  }
+
+  &:active {
+    outline: none;
+    opacity: 0.3;
+  }
+}
+
+.contacts-location {
   margin: 0;
   font-style: normal;
 }
